--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.0.0",
+    "gatsby-background-image": "^1.5.3",
+    "gatsby-background-image-es5": "^1.5.3",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-offline": "^5.0.0",
@@ -23,11 +25,15 @@
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-source-graphcms": "^2.6.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "gbimage-bridge": "^0.1.4",
+    "intersection-observer": "^0.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-toastify": "^8.0.3",
     "styled-components": "^5.3.3"
   },
