--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-background-image-es5": "^1.5.3",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
