--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gatsby": "^4.0.0",
     "gatsby-background-image": "^1.5.3",
     "gatsby-background-image-es5": "^1.5.3",
-    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-image": "^2.1.0-next.0",
     "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-offline": "^5.0.0",
@@ -26,10 +26,11 @@
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-source-graphcms": "^2.6.0",
+    "gatsby-source-graphcms": "^2.7.0-next.1",
     "gatsby-transformer-sharp": "^4.0.0",
     "gbimage-bridge": "^0.1.4",
     "intersection-observer": "^0.12.0",
+    "lmdb-store": "^1.6.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
