--- a/package.json
+++ b/package.json
@@ -14,30 +14,23 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.13.3",
+    "browser-monads": "^1.0.0",
     "gatsby": "^4.0.0",
     "gatsby-background-image": "^1.5.3",
-    "gatsby-background-image-es5": "^1.5.3",
     "gatsby-plugin-image": "^2.1.0-next.0",
     "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-source-graphcms": "^2.7.0-next.1",
     "gatsby-transformer-sharp": "^4.0.0",
-    "gbimage-bridge": "^0.1.4",
     "intersection-observer": "^0.12.0",
-    "lmdb-store": "^1.6.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.0",
-    "react-toastify": "^8.0.3",
-    "styled-components": "^5.3.3"
+    "react-toastify": "^8.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
