--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "browser-monads": "^1.0.0",
     "gatsby": "^4.0.0",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-image": "^2.1.0-next.0",
